[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rank-mixer"
version = "0.1.0"
description = "PyTorch implementation of RankMixer for ranking tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["rank_mixer*"]